--- a/RoomA.ini
+++ b/RoomA.ini
@@ -1,5 +1,6 @@
 [MapParameters]
-DiagonalTravel: True
+DiagonalTravel: False
+# Modify the three lines below for each map:
 MapName: RoomA
 StartingPoint: 105
 ExitState: 116
@@ -9,12 +10,10 @@ ObjectLocations: 24 30 90
 ObjectTypes: 0 1 2
 ObjectNames: Blue Orange Green
 
+# No need to modify anything here
 [AgentParameters]
 CostPrior: PartialUniform
 RewardPrior: ScaledUniform
-# Hacky map specification.
-# Costs fluctuate up to 10, but they're then made observable at 100 and 0.1
-# First parameter is scaling factor.
 CostParameters = 10 100 1
 RewardParameters = 100
 Restrict: False
