Updated map names and paths.

--- a/maps/DX_PX_0.ini
+++ b/maps/DX_PX_0.ini
@@ -1,9 +1,9 @@
 [MapParameters]
-DiagonalTravel: False
+DiagonalTravel: True
 # Modify the three lines below for each map:
-MapName: NX_NX_A
-StartingPoint: 17
-ExitState: 6
+MapName: maps/DX_PY_0
+StartingPoint: 15
+ExitState: 4
 
 [Objects]
 ObjectLocations: 24 30 90
