--- a/maps/ND_DX_1.ini
+++ b/maps/ND_DX_1.ini
@@ -1,9 +1,9 @@
 [MapParameters]
-DiagonalTravel: False
+DiagonalTravel: True
 # Modify the three lines below for each map:
-MapName: PX_DX_A
-StartingPoint: 16
-ExitState: 5
+MapName: maps/ND_DX_1
+StartingPoint: 42
+ExitState: 43
 
 [Objects]
 ObjectLocations: 24 30 90
