--- a/maps/ND_NX_0.ini
+++ b/maps/ND_NX_0.ini
@@ -1,7 +1,7 @@
 [MapParameters]
-DiagonalTravel: False
+DiagonalTravel: True
 # Modify the three lines below for each map:
-MapName: ND_UN
+MapName: maps/ND_NX_0
 StartingPoint: 64
 ExitState: 65
 
