--- a/maps/ND_NX_1.ini
+++ b/maps/ND_NX_1.ini
@@ -1,9 +1,9 @@
 [MapParameters]
-DiagonalTravel: False
+DiagonalTravel: True
 # Modify the three lines below for each map:
-MapName: DX_DX_A
-StartingPoint: 56
-ExitState: 55
+MapName: maps/ND_NX_1
+StartingPoint: 42
+ExitState: 43
 
 [Objects]
 ObjectLocations: 24 30 90
