--- a/maps/NX_NX_0.ini
+++ b/maps/NX_NX_0.ini
@@ -1,9 +1,9 @@
 [MapParameters]
-DiagonalTravel: False
+DiagonalTravel: True
 # Modify the three lines below for each map:
-MapName: UN_DX_A
-StartingPoint: 56
-ExitState: 55
+MapName: maps/NX_NX_0
+StartingPoint: 17
+ExitState: 6
 
 [Objects]
 ObjectLocations: 24 30 90
