--- a/maps/PX_DX_0.ini
+++ b/maps/PX_DX_0.ini
@@ -1,9 +1,9 @@
 [MapParameters]
-DiagonalTravel: False
+DiagonalTravel: True
 # Modify the three lines below for each map:
-MapName: UN_UN_A
-StartingPoint: 64
-ExitState: 65
+MapName: maps/PX_DX_0
+StartingPoint: 16
+ExitState: 5
 
 [Objects]
 ObjectLocations: 24 30 90
