--- a/maps/PX_NX_0.ini
+++ b/maps/PX_NX_0.ini
@@ -1,9 +1,9 @@
 [MapParameters]
-DiagonalTravel: False
+DiagonalTravel: True
 # Modify the three lines below for each map:
-MapName: ND_NX_B
-StartingPoint: 42
-ExitState: 43
+MapName: maps/PX_NX_0
+StartingPoint: 67
+ExitState: 66
 
 [Objects]
 ObjectLocations: 24 30 90
