--- a/maps/PX_PX_0.ini
+++ b/maps/PX_PX_0.ini
@@ -1,9 +1,9 @@
 [MapParameters]
-DiagonalTravel: False
+DiagonalTravel: True
 # Modify the three lines below for each map:
-MapName: NX_PX_A
-StartingPoint: 53
-ExitState: 54
+MapName: maps/PX_PX_0
+StartingPoint: 15
+ExitState: 4
 
 [Objects]
 ObjectLocations: 24 30 90
