--- a/maps/PX_UN_0.ini
+++ b/maps/PX_UN_0.ini
@@ -1,9 +1,9 @@
 [MapParameters]
-DiagonalTravel: False
+DiagonalTravel: True
 # Modify the three lines below for each map:
-MapName: ND_PX_A
-StartingPoint: 42
-ExitState: 43
+MapName: maps/PX_UN_0
+StartingPoint: 53
+ExitState: 54
 
 [Objects]
 ObjectLocations: 24 30 90
