--- a/maps/UN_DX_0.ini
+++ b/maps/UN_DX_0.ini
@@ -1,7 +1,7 @@
 [MapParameters]
-DiagonalTravel: False
+DiagonalTravel: True
 # Modify the three lines below for each map:
-MapName: NX_UN_A
+MapName: maps/UN_DX_0
 StartingPoint: 56
 ExitState: 55
 
