--- a/maps/UN_PX_0.ini
+++ b/maps/UN_PX_0.ini
@@ -1,9 +1,9 @@
 [MapParameters]
-DiagonalTravel: False
+DiagonalTravel: True
 # Modify the three lines below for each map:
-MapName: PX_UN_A
-StartingPoint: 53
-ExitState: 54
+MapName: maps/UN_PX_0
+StartingPoint: 105
+ExitState: 116
 
 [Objects]
 ObjectLocations: 24 30 90
