--- a/maps/DX_DX_0.ini
+++ b/maps/DX_DX_0.ini
@@ -1,9 +1,9 @@
 [MapParameters]
-DiagonalTravel: False
+DiagonalTravel: True
 # Modify the three lines below for each map:
-MapName: PX_NX_A
-StartingPoint: 67
-ExitState: 66
+MapName: maps/DX_DX_0
+StartingPoint: 56
+ExitState: 55
 
 [Objects]
 ObjectLocations: 24 30 90
