--- a/maps/DX_NX_0.ini
+++ b/maps/DX_NX_0.ini
@@ -1,9 +1,9 @@
 [MapParameters]
-DiagonalTravel: False
+DiagonalTravel: True
 # Modify the three lines below for each map:
-MapName: UN_NX_A
-StartingPoint: 42
-ExitState: 43
+MapName: maps/DX_NX_0
+StartingPoint: 16
+ExitState: 5
 
 [Objects]
 ObjectLocations: 24 30 90
