--- a/maps/DX_UN_0.ini
+++ b/maps/DX_UN_0.ini
@@ -1,9 +1,9 @@
 [MapParameters]
-DiagonalTravel: False
+DiagonalTravel: True
 # Modify the three lines below for each map:
-MapName: ND_NX_A
-StartingPoint: 64
-ExitState: 65
+MapName: maps/DX_UN_0
+StartingPoint: 16
+ExitState: 5
 
 [Objects]
 ObjectLocations: 24 30 90
