--- a/maps/ND_DX_0.ini
+++ b/maps/ND_DX_0.ini
@@ -1,9 +1,9 @@
 [MapParameters]
-DiagonalTravel: False
+DiagonalTravel: True
 # Modify the three lines below for each map:
-MapName: UN_PX_A
-StartingPoint: 105
-ExitState: 116
+MapName: maps/ND_DX_0
+StartingPoint: 64
+ExitState: 65
 
 [Objects]
 ObjectLocations: 24 30 90
