--- a/maps/ND_PX_0.ini
+++ b/maps/ND_PX_0.ini
@@ -1,9 +1,9 @@
 [MapParameters]
-DiagonalTravel: False
+DiagonalTravel: True
 # Modify the three lines below for each map:
-MapName: DX_PY_A
-StartingPoint: 15
-ExitState: 4
+MapName: maps/ND_PX_0
+StartingPoint: 42
+ExitState: 43
 
 [Objects]
 ObjectLocations: 24 30 90
