--- a/maps/ND_PX_1.ini
+++ b/maps/ND_PX_1.ini
@@ -1,7 +1,7 @@
 [MapParameters]
-DiagonalTravel: False
+DiagonalTravel: True
 # Modify the three lines below for each map:
-MapName: ND_PX_B
+MapName: maps/ND_PX_1
 StartingPoint: 104
 ExitState: 115
 
