--- a/maps/ND_UN_0.ini
+++ b/maps/ND_UN_0.ini
@@ -1,9 +1,9 @@
 [MapParameters]
-DiagonalTravel: False
+DiagonalTravel: True
 # Modify the three lines below for each map:
-MapName: NX_DX_A
-StartingPoint: 56
-ExitState: 55
+MapName: maps/ND_UN_0
+StartingPoint: 64
+ExitState: 65
 
 [Objects]
 ObjectLocations: 24 30 90
