--- a/maps/NX_PX_0.ini
+++ b/maps/NX_PX_0.ini
@@ -1,9 +1,9 @@
 [MapParameters]
-DiagonalTravel: False
+DiagonalTravel: True
 # Modify the three lines below for each map:
-MapName: PX_PX_A
-StartingPoint: 15
-ExitState: 4
+MapName: maps/NX_PX_0
+StartingPoint: 53
+ExitState: 54
 
 [Objects]
 ObjectLocations: 24 30 90
