--- a/maps/NX_UN_0.ini
+++ b/maps/NX_UN_0.ini
@@ -1,9 +1,9 @@
 [MapParameters]
-DiagonalTravel: False
+DiagonalTravel: True
 # Modify the three lines below for each map:
-MapName: ND_DX_B
-StartingPoint: 42
-ExitState: 43
+MapName: maps/NX_UN_0
+StartingPoint: 56
+ExitState: 55
 
 [Objects]
 ObjectLocations: 24 30 90
