--- a/maps/UN_NX_0.ini
+++ b/maps/UN_NX_0.ini
@@ -1,9 +1,9 @@
 [MapParameters]
-DiagonalTravel: False
+DiagonalTravel: True
 # Modify the three lines below for each map:
-MapName: DX_NX_A
-StartingPoint: 16
-ExitState: 5
+MapName: maps/UN_NX_0
+StartingPoint: 42
+ExitState: 43
 
 [Objects]
 ObjectLocations: 24 30 90
