--- a/maps/UN_UN_0.ini
+++ b/maps/UN_UN_0.ini
@@ -1,9 +1,9 @@
 [MapParameters]
-DiagonalTravel: False
+DiagonalTravel: True
 # Modify the three lines below for each map:
-MapName: DX_UN_A
-StartingPoint: 16
-ExitState: 5
+MapName: maps/UN_UN_0
+StartingPoint: 64
+ExitState: 65
 
 [Objects]
 ObjectLocations: 24 30 90
