Added diagonal toggle script.

--- a/maps/ND_DX_0.ini
+++ b/maps/ND_DX_0.ini
@@ -1,5 +1,5 @@
 [MapParameters]
-DiagonalTravel: True
+DiagonalTravel: False
 # Modify the three lines below for each map:
 MapName: maps/ND_DX_0
 StartingPoint: 64
