--- a/maps/DX_DX_0.ini
+++ b/maps/DX_DX_0.ini
@@ -1,9 +1,9 @@
 [MapParameters]
-DiagonalTravel: True
+DiagonalTravel: False
 # Modify the three lines below for each map:
-MapName: maps/DX_DX_0
-StartingPoint: 56
-ExitState: 55
+MapName: maps/DX_NX_0
+StartingPoint: 16
+ExitState: 5
 
 [Objects]
 ObjectLocations: 24 30 90
