--- a/maps/DX_UN_0.ini
+++ b/maps/DX_UN_0.ini
@@ -1,5 +1,5 @@
 [MapParameters]
-DiagonalTravel: True
+DiagonalTravel: False
 # Modify the three lines below for each map:
 MapName: maps/DX_UN_0
 StartingPoint: 16
