--- a/maps/ND_PX_1.ini
+++ b/maps/ND_PX_1.ini
@@ -1,5 +1,5 @@
 [MapParameters]
-DiagonalTravel: True
+DiagonalTravel: False
 # Modify the three lines below for each map:
 MapName: maps/ND_PX_1
 StartingPoint: 104
