--- a/maps/NX_NX_0.ini
+++ b/maps/NX_NX_0.ini
@@ -1,5 +1,5 @@
 [MapParameters]
-DiagonalTravel: True
+DiagonalTravel: False
 # Modify the three lines below for each map:
 MapName: maps/NX_NX_0
 StartingPoint: 17
