--- a/maps/PX_PX_0.ini
+++ b/maps/PX_PX_0.ini
@@ -1,5 +1,5 @@
 [MapParameters]
-DiagonalTravel: True
+DiagonalTravel: False
 # Modify the three lines below for each map:
 MapName: maps/PX_PX_0
 StartingPoint: 15
