--- a/maps/UN_DX_0.ini
+++ b/maps/UN_DX_0.ini
@@ -1,5 +1,5 @@
 [MapParameters]
-DiagonalTravel: True
+DiagonalTravel: False
 # Modify the three lines below for each map:
 MapName: maps/UN_DX_0
 StartingPoint: 56
