--- a/maps/NX_NX_0.ini
+++ b/maps/NX_NX_0.ini
@@ -19,8 +19,9 @@ RewardParameters = 100
 Restrict: False
 Minimum: 1
 Capacity: 1
-SoftmaxChoice = False
+SoftmaxChoice = True
 SoftmaxAction = True
 RNull = 0
 CNull = 0
 actionTau = 0.15
+choiceTau = 0.1
